# jwt-cli

./: Cargo.toml
src/: main.rs  utils.rs
src/keys/: decoding.rs  encoding.rs  mod.rs  pkcs1_der.rs  secret_type.rs
src/translators/: decode.rs  encode.rs
