[package]
name = "jwt-cli"
description = "A super fast CLI tool to decode and encode JWTs built in Rust"
version = "6.2.0"
repository = "https://github.com/mike-engel/jwt-cli"
authors = [
    "Mike Engel <mike@mike-engel.com>",
    "Corey McGregor <https://github.com/shousper>",
    "Aaron Schaef <https://github.com/atschaef>",
    "Hugh Simpson <https://github.com/hughsimpson>",
]
edition = "2021"
license = "MIT"

[[bin]]
name = "jwt"
path = "src/main.rs"
test = true

[dependencies]
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "9.3.1"
jsonwebkey = "0.3.5"
bunt = "0.2"
serde = "1"
serde_derive = "1"
serde_json = { version = "1", features = ["raw_value"] }
chrono = "0.4"
parse_duration = "2.1.1"
atty = "0.2"
clap_generate = "3.0.3"
clap_complete = "4.5.50"
clap_complete_nushell = "4.5"
strum = { version = "0.27" , features = ["derive"] }
log = "0.4.26"

[dev-dependencies]
tempdir = "0.3.7"
